--- a/src/public/css/app.css
+++ b/src/public/css/app.css
@@ -2933,12 +2933,21 @@ html:has(.drawer-toggle:checked) {
   line-height: 2.5rem;
 }
 
+.text-xs {
+  font-size: 0.75rem;
+  line-height: 1rem;
+}
+
 .font-bold {
   font-weight: 700;
 }
 
 .font-semibold {
   font-weight: 600;
+}
+
+.font-thin {
+  font-weight: 100;
 }
 
 .text-base-content {
