update more ui and updated the way password recovery will initialize

--- a/src/views/500.html
+++ b/src/views/500.html
@@ -62,11 +62,11 @@
         <h1 class="text-5xl font-bold text-center" style="font-size: 92px;">500</h1>
         <h1 class="text-2xl text-center">Server Error</h1>
         <p class="py-6 text-center">
-            The server has encountered an error processing your request, please try
-            again at a later time.
+            The server has encountered an internal error while processing your request, please try
+            again later.
         </p>
         <br>
-        <center> <button class="btn btn-neutral px-10">Go Home</button> </center>
+        <center> <a href="https://myshare.haydar.dev"><button class="btn btn-neutral px-10">Go Home</button> </a></center>
       </div>
     </div>
   </div>
