--- a/src/views/403.html
+++ b/src/views/403.html
@@ -65,7 +65,7 @@
             You do not have permission or authorization to access this file or directory.
         </p>
         <br>
-        <center> <button class="btn btn-neutral px-10">Go Home</button> </center>
+        <center> <a href="https://myshare.haydar.dev"><button class="btn btn-neutral px-10">Go Home</button> </a></center>
       </div>
     </div>
   </div>
