feat: fixed auth. it works now

--- a/public/css/app.css
+++ b/public/css/app.css
@@ -2454,6 +2454,9 @@
       margin-block-end: calc(calc(var(--spacing) * 3) * calc(1 - var(--tw-space-y-reverse)));
     }
   }
+  .self-center {
+    align-self: center;
+  }
   .menu-sm {
     :where(li:not(.menu-title) > *:not(ul, details, .menu-title)), :where(li:not(.menu-title) > details > summary:not(.menu-title)) {
       border-radius: var(--radius-field);
@@ -2478,6 +2481,10 @@
   .border {
     border-style: var(--tw-border-style);
     border-width: 1px;
+  }
+  .border-2 {
+    border-style: var(--tw-border-style);
+    border-width: 2px;
   }
   .border-b {
     border-bottom-style: var(--tw-border-style);
@@ -2515,6 +2522,9 @@
   }
   .bg-success {
     background-color: var(--color-success);
+  }
+  .bg-center {
+    background-position: center;
   }
   .fill-current {
     fill: currentColor;
@@ -2561,6 +2571,9 @@
   }
   .py-2 {
     padding-block: calc(var(--spacing) * 2);
+  }
+  .py-4 {
+    padding-block: calc(var(--spacing) * 4);
   }
   .py-6 {
     padding-block: calc(var(--spacing) * 6);
@@ -2768,6 +2781,15 @@
           visibility: visible;
         }
       }
+    }
+  }
+  .lg\:stats {
+    @media (width >= 64rem) {
+      position: relative;
+      display: inline-grid;
+      grid-auto-flow: column;
+      overflow-x: auto;
+      border-radius: var(--radius-box);
     }
   }
   .lg\:flex {
