fix: fix discord embeds from only showing the first word of content

--- a/src/views/note.ejs
+++ b/src/views/note.ejs
@@ -4,8 +4,8 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title><%= note.title %></title>
-    <meta content=<%= note.title %> property="og:title" />
-    <meta content=<%= note.content %> property="og:description" />
+    <meta content="<%= note.title %>" property="og:title" />
+    <meta content="<%= note.content %>" property="og:description" />
     <meta content=<%= note.file %> property="og:image" />
     <meta name="twitter:card" content="summary_large_image">
     <link href="/css/app.css" rel="stylesheet">
