fix(ui): fixed an issue where long words without spaces would go infinitely long fix(core): fixed not being able to register

--- a/public/css/app.css
+++ b/public/css/app.css
@@ -2687,6 +2687,9 @@
   .text-wrap {
     text-wrap: wrap;
   }
+  .break-words {
+    overflow-wrap: break-word;
+  }
   .text-base-content {
     color: var(--color-base-content);
   }
